--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,10 +6,10 @@
 	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#000000" />
-	<meta name="description" content="MERN Stack Application Template" />
+	<meta name="description" content="Chess game" />
 	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-	<title>MERN Stack</title>
+	<title>Chess</title>
 </head>
 
 <body>
